--- a/package.json
+++ b/package.json
@@ -2,49 +2,10 @@
   "name": "tutorial",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@pankod/refine-antd": "^3.18.0",
-    "@pankod/refine-core": "^3.18.0",
-    "@pankod/refine-react-router-v6": "^3.18.0",
-    "@pankod/refine-simple-rest": "^3.18.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1"
-  },
   "devDependencies": {
-    "@types/node": "^12.20.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "nx": "^14.8.3",
-    "typescript": "^4.7.4"
+    "nx": "^14.8.3"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build": "nx build"
   }
 }
